# mandelbrot-cuda-cpu

./: .gitignore  CMakeLists.txt  README.md  mandelbrot.cpp  mandelbrot.cu
src/: mandelbrot.cpp  mandelbrot.cu
